versions/v2.0.0/guides/Community-Guidelines.md
---
version: 2.0.0
date: 2025-03-04
type: system-doc
status: public
tags: [william, community, guidelines]
related: []
changelog:
  - version: 2.0.0
    date: 2025-03-04
    changes:
      - "MAJOR: Switch to YAML frontmatter"
      - "MAJOR: Enhanced metadata structure"
    references: []
  - version: 1.0.0
    date: 2025-03-03
    changes:
      - "MAJOR: Initial documentation"
    references: []
---
# Community Guidelines

## Overview

These guidelines help maintain a healthy, productive community around WILL development and usage.

## Documentation Standards

### 1. Public Documentation (WILL Wiki)
- Architecture overviews
- Integration guides
- API documentation
- Community resources
- Use cases and tutorials

### 2. Private Documentation (SKENAI)
- Implementation details
- Security considerations
- Internal architecture
- Development roadmaps
- Sensitive configurations

## Contributing Guidelines

### Documentation Contributions
1. **Content Types**
   - Technical documentation
   - Tutorials
   - Use cases
   - Bug reports
   - Feature requests

2. **Quality Standards**
   - Clear and concise writing
   - Accurate information
   - Up-to-date content
   - Proper formatting

3. **Review Process**
   - Community review
   - Technical accuracy check
   - Style consistency
   - Regular updates

## Community Engagement

### Channels
- GitHub Discussions
- Discord Community
- Developer Forums
- Social Media

### Best Practices
1. **Communication**
   - Be respectful and professional
   - Stay on topic
   - Help others learn
   - Share knowledge

2. **Collaboration**
   - Work in public
   - Share early and often
   - Accept feedback
   - Give credit

## Related Pages
- [[Contributing]]
- [[Support]]
- [[FAQ]]


## Integration with NATURAL Framework
- Clean repository separation
- Natural pipeline flow
- Validator protection
- Interface standards

## Pipeline API Integration
- /pipeline/submit - Entry point
- /pipeline/validate - Basic checks
- /pipeline/analyze - Efficiency (Q.1)
- /pipeline/patterns - Recognition (Q.2)
- /pipeline/status - State checks
- /pipeline/vote - Governance

## Integration with Three-Graph Lattice
- Technical graph validation
- Economic resource optimization
- Quality metrics tracking